RESOLVED FIXED194812
[iOS] "touch-action: none" should not prevent text selection or tapping on a link
https://bugs.webkit.org/show_bug.cgi?id=194812
Summary [iOS] "touch-action: none" should not prevent text selection or tapping on a ...
Antoine Quint
Reported 2019-02-19 01:29:12 PST
While the spec is not clear about that (see https://github.com/w3c/pointerevents/issues/276) other implementations essentially limit "touch-action: none" to be preventing panning and zooming but not other built-in behaviour such as text selection or navigation.
Attachments
Patch (6.91 KB, patch)
2019-02-19 01:32 PST, Antoine Quint
no flags
Patch (8.40 KB, patch)
2019-02-19 01:39 PST, Antoine Quint
dino: review+
Antoine Quint
Comment 1 2019-02-19 01:29:23 PST
Antoine Quint
Comment 2 2019-02-19 01:32:50 PST
Antoine Quint
Comment 3 2019-02-19 01:39:17 PST
Antoine Quint
Comment 4 2019-02-19 02:46:11 PST
Note You need to log in before you can comment on or make changes to this bug.